--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,11 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Mr+Bedfort&family=Noto+Sans+JP:wght@100&display=swap');
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+h1 {
+  font-family: 'Mr Bedfort', cursive;
+}
+
+p {
+  font-size: 3em;
+}
+
 body {
+    position: absolute;
     margin: 0;
-    font-family: sans-serif;
-    background-image: url(assets/Hollowed-Boxes.svg);
+    font-family: 'Noto Sans JP', sans-serif;
+    color: #B7D5D4;
+    background-image: url(../images/Hollowed-Boxes.svg);
     background-color: #373E40;
+    height: 100vh
   }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
+
+.header {
+  margin-left: 1em;
+  font-size: 3em;
+  height: 15vh;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4vh;
+  background-color: #373E40;
+}
