--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,7 +25,7 @@ body {
     color: #B7D5D4;
     background-image: url(../images/Hollowed-Boxes.svg);
     background-color: #373E40;
-    height: 100vh
+    height: 96vh
   }
 
 .header {
@@ -35,7 +35,7 @@ body {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 4vh;
