--- a/www/css/nav.css
+++ b/www/css/nav.css
@@ -2,38 +2,42 @@
 .nav {
     overflow: hidden;
     background-color: #373E40;
-    height: 5vh;
+    width: 100%;
   }
   
   /* Links inside the navbar */
   .nav a {
     float: left;
-    font-size: 16px;
+    font-size: 1em;
     color: #B7D5D4;
     text-align: center;
-    padding: 14px 16px;
+    padding: .75em 1em;
     text-decoration: none;
+    /* width: 12.5% */
   }
   
+  li {
+    display: inline;
+  }
   /* The dropdown container */
   .proj-dropdown {
     float: left;
     overflow: hidden;
+    /* width: 12.5%; */
   }
   
   /* Dropdown button */
   .proj-dropdown .proj-dropdown-bttn {
-    font-size: 16px;
+    font-size: 1em;
     border: none;
     outline: none;
     color: #B7D5D4;
-    padding: 14px 16px;
+    padding: .75em 1em;
     background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
   }
-  
-  /* Add a red background color to navbar links on hover */
+
   .nav a:hover, .proj-dropdown:hover .proj-dropdown-bttn {
     background-color: #305252;
   }
@@ -52,10 +56,11 @@
   .proj-dropdown-content a {
     float: none;
     color: black;
-    padding: 12px 16px;
+    padding: .75em 1em;
     text-decoration: none;
     display: block;
     text-align: left;
+    width: 100%
   }
   
   /* Add a grey background color to dropdown links on hover */
