--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -8,30 +8,23 @@
   }
 
   .quote {
-    height: 1vh;
-    font-size: .75em;
-    text-align: left;
-  }
-
-  .quote p {
-    font-size: 1em;
-  }
-
-  .topQuote {
-    top: -53em;
-    margin-left: 16em;
-    margin-right: .5em;
-  }
-
-  .quoteAttrib {
-      font-size: .9em;
+    box-sizing: border-box;
+    visibility: hidden;
+    height: 0vh;
   }
 
   .contentPane {
-    height: 76vh;
+    box-sizing: border-box;
+    padding-top: 1em;
+    height: 77vh;
   }
   
+  .nav {
+      box-sizing: border-box;
+      top: 3em;
+  }
   .header {
+    box-sizing: border-box;
     margin-left: 1em;
     margin-bottom: -.75em;
     font-size: 1.25em;
@@ -39,10 +32,11 @@
   }
 
   .text {
+    box-sizing: border-box;
     color: #E5F0F0;
     margin: 2em 2em;
-    position: relative;
-    top: -34em;
+    position: absolute;
+    top: 7em;
     overflow: auto;
     height: 74vh;
 }
